--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -1,7 +1,7 @@
 
 
 cmake_minimum_required(VERSION 3.10.0)
-project(GameEngine VERSION 1.0.0)
+project(NAG_Engine VERSION 1.0.0)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
