--- a/Game/CMakelists.txt
+++ b/Game/CMakelists.txt
@@ -20,6 +20,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${HEADER_DIR})
 target_link_libraries(${PROJECT_NAME}
     PUBLIC
     Game_Engine
+    Math
 )
 find_package(SFML COMPONENTS 
     System
