--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -24,3 +24,4 @@ add_subdirectory(sample)
 add_subdirectory(Game_Engine)
 add_subdirectory(Game)
 add_subdirectory(Math)
+add_subdirectory(TestUnits)
